// Copyright 2023 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

import "google/protobuf/any.proto";

message InstanceSyncTaskDetails {
  repeated DeploymentReleaseDetails details = 1;
  ResponseBatchConfig response_batch_config = 2;
}

message ResponseBatchConfig {
  int32 instance_count = 1;
  int32 release_count = 2;
}

message DeploymentReleaseDetails {
  string task_info_id = 1;
  repeated google.protobuf.Any deployment_details = 2;
}
